# documatic-2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  example_config.toml  fix_search_results_properly.py  main.py  purpose.md  pyproject.toml
_tasks/: 03_document_chunking.md  04_embedding_pipeline.md  08_quality_evaluation.md  09_configuration_system.md  10_testing_infrastructure.md
_tasks/01_project_setup/: task.md  test.md
_tasks/02_document_acquisition/: task.md  test.md
_tasks/03_document_chunking/: test.md
_tasks/04_embedding_pipeline/: test.md
_tasks/05_search_layer/: task.md  test.md
_tasks/06_rag_chat_interface/: task.md  test.md
_tasks/07_cli_application/: task.md  test.md
_tasks/08_quality_evaluation/: test.md
_tasks/09_configuration_system/: test.md
_tasks/10_testing_infrastructure/: test.md
src/documatic/: acquisition.py  chat.py  chunking.py  cli.py  config.py  embeddings.py  evaluation.py  search.py
tests/: __init__.py
tests/fixtures/: batch_data.py  chat_mocks.py  chat_test_data.py  db_configs.py  mocks.py
tests/integration/: test_chat_integration.py  test_embedding_performance.py  test_embedding_pipeline_integration.py  test_evaluation_integration.py  test_streaming.py
tests/unit/: test_batch_processing.py  test_chat_errors.py  test_citations.py  test_config.py  test_context_management.py  test_conversation_flow.py  test_embedding_model.py  test_evaluation.py  test_input_edge_cases.py  test_lancedb_schema.py  test_prompt_templates.py  test_pydantic_ai.py  test_search_integration.py  test_vector_search.py  (+1 more)
(+6 files in other folders)
